# smartem-decisions

./: .copier-answers.yml  .dev.env.example  .dockerignore  .env.example  .env.production.example  .env.staging.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  .work-in-progress-athena-decisions.md  CLAUDE.md  Dockerfile  LICENSE  README.md  README_PYPI.md  alembic.ini  dev-requirements.txt  docker-compose.yaml  docs-plan.md  entrypoint.sh  osv-scanner.toml  pyproject.toml  renovate.json  requirements.txt  setup.py  switcher.json
.claude/: settings.json
.claude/agents/: database-admin.md  kubernetes-ops.md  project-owner-advisor.md  project-owner.md  software-engineer.md  technical-writer.md
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  dependabot.yml
.github/pages/: make_switcher.py
.github/workflows/: _container-gcrio.yml  _container-ghcrio.yml  _container.yml  _dist.yml  _docs.yml  _schema_drift.yml  _security.yml  _test.yml  build-win-epu-data-intake.yml  build_win_epu_data_intake.yml  build_win_fsrecorder.yml  build_win_smartem_agent.yml  ci.yml  docs-only.yml  leaked-secrets-scan.yml  osv-scanner.yml  periodic.yml  publish-openapi-spec.yml  release-smartem-agent.yml  release-smartem-decisions.yml  security-scan.yml
docs/: _api.rst  conf.py  database-schema-drift-prevention.md  index.md  reference.md  software-architecture.mermaid  system-architecture.mermaid  terms-and-defs.md
docs/api/: index.html  openapi.json
docs/assets/: swagger-decision-service-after-update.json
docs/explanations/: backend-agent-communication-system-design.md  smartem-agent-v2-design.md  technical-notes.md
docs/how-to/: configure-environment-variables.md  configure-logging.md  deploy-kubernetes.md  development-tools.md  run-agent.md  run-backend.md  run-container.md  run-e2e-dev-simulation.md  use-api-documentation.md  use-core-http-api-client.md  use-mcp-interface.md
docs/tutorials/: installation.md
k8s/: README.md  configmap.yaml  http-api-deployment.yaml  http-api-service.yaml  local-test.yaml  secret.example.yaml  worker-deployment.yaml
main/: .buildinfo  _api.html  athena-decision-service-api-spec.README.html  database-schema-drift-prevention.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  terms-and-defs.html  tutorials.html
main/.doctrees/: _api.doctree  athena-decision-service-api-spec.README.doctree  database-schema-drift-prevention.doctree  explanations.doctree  genindex.doctree  how-to.doctree  index.doctree  reference.doctree  terms-and-defs.doctree
main/_api/: smartem_backend.agent_connection_manager.html  smartem_backend.agent_data_cleanup.html  smartem_backend.api_client.html  smartem_backend.api_server.html  smartem_backend.cli.html  smartem_backend.cli.initialise_prediction_model_weights.html  smartem_backend.cli.random_model_predictions.html  smartem_backend.cli.random_prior_updates.html  smartem_backend.cli.register_quality_prediction_model.html  smartem_backend.consumer.html  smartem_backend.html  smartem_backend.http_api.html  smartem_backend.log_manager.html  smartem_backend.model.database.html  smartem_backend.model.entity_status.html  smartem_backend.model.html  smartem_backend.model.http_request.html  smartem_backend.model.http_response.html  smartem_backend.model.mq_event.html  smartem_backend.mq_publisher.html  smartem_backend.predictions.html  smartem_backend.predictions.update.html  smartem_backend.run_api.html  smartem_backend.utils.html  smartem_decisions.cli.html  smartem_decisions.cli.initialise_prediction_model_weights.html  smartem_decisions.cli.random_model_predictions.html  smartem_decisions.cli.random_prior_updates.html  smartem_decisions.cli.register_quality_prediction_model.html  smartem_decisions.consumer.html  smartem_decisions.html  smartem_decisions.log_manager.html  smartem_decisions.model.database.html  smartem_decisions.model.entity_status.html  smartem_decisions.model.html  smartem_decisions.model.http_request.html  smartem_decisions.model.http_response.html  smartem_decisions.model.mq_event.html  smartem_decisions.mq_consumer.html  smartem_decisions.mq_publisher.html  (+8 more)
main/_modules/: index.html
main/_sources/: _api.rst.txt  athena-decision-service-api-spec.README.md.txt  database-schema-drift-prevention.md.txt  reference.md.txt  terms-and-defs.md.txt
main/_static/: documentation_options.js
main/api/: index.html
main/explanations/: backend-agent-communication-system-design.html  decisions.html  epu-data-structures.html  smartem-agent-design.html  technical-notes.html
main/how-to/: configure-logging.html  (+17 more)
test-v0.0.2/: .buildinfo  genindex.html  objects.inv  py-modindex.html  reference.html  searchindex.js  tutorials.html
tests/: check_smartem_core_http_api.py  conftest.py  epu-output-simulator.py  test_cli.py  test_graylog_udp.py
tools/: README.md  check_schema_drift.py  db_table_totals.py  dev-k8s.sh  external_message_simulator.py  find_foilhole_duplicates.py  format_xml.py  generate_api_docs.py  makeiso.sh  mcp_demo.py  publish_openapi.py  run-e2e-test-multi-microscope.sh  run-e2e-test-post-acq.sh  run-e2e-test-v2-post-acq.sh  run-e2e-test-v2.sh  run-e2e-test.sh  setup-test-agent-session.py  simulate-messages.sh  sse_client_example.py
v0.0.1/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  terms-and-defs.html  tutorials.html
v0.0.2/: _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  terms-and-defs.html
v0.0.3/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  terms-and-defs.html  tutorials.html
v0.0.4/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  terms-and-defs.html  tutorials.html
(+690 files in other folders)
