[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "smartem-decisions"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]
description = "A proof of concept for a decision engine to automate CryoEM workflows for structural biology"
dependencies = [] # Note: this section is empty by design, use `pip install -e .[all]`
dynamic = ["version"]
license.file = "LICENSE"
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
# Development dependencies
dev = [
    "copier",
    "detect-secrets",
    "myst-parser",
    "pipdeptree",
    "pre-commit",
    "pydata-sphinx-theme>=0.12",
    "pyright",
    "pytest",
    "pytest-cov",
    "ruff",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-design",
    "tox-direct",
    "types-mock",
    "types-requests",
    "types-pyyaml",
]

# Core shared dependencies (schemas, utils, enums)
common = [
    "pydantic>=2.11.7,<3.0.0",
]

# API client dependencies (now part of backend)
client = [
    "smartem-decisions[common]",
    "httpx>=0.27.0,<1.0.0",
    "requests>=2.32.0,<3.0.0",
]

# CLI and general utilities
cli = [
    "python-dotenv==1.1.1",
    "pyyaml",
    "rich",
    "typer==0.16.1",
]

# Backend system component dependencies (database, messaging, API server/client)
backend = [
    "smartem-decisions[common,client,cli]",
    "fastapi>=0.116.1,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "pika>=1.3.2,<2.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "sqlmodel>=0.0.24,<1.0.0",
    "alembic>=1.13.0,<2.0.0",
]

# Agent component dependencies
agent = [
    "smartem-decisions[common,client,cli]",
    "lxml>=5.0.0,<7.0.0",
    "watchdog>=4.0.0,<7.0.0",
]

# FSRecorder tool dependencies
fsrecorder = [
    "watchdog>=4.0.0,<7.0.0",
]

# Athena API mock server dependencies (optional)
mock = [
    "smartem-decisions[client]",
    "fastapi>=0.116.1,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

# MCP server and client dependencies (optional)
mcp = [
    "smartem-decisions[common,client,cli,agent]",
    "fastmcp>=2.0.0",
]

# Combined dependencies (for convenience)
all = [
    "smartem-decisions[dev,common,client,cli,backend,agent,fsrecorder,mock,mcp]",
]

[project.scripts]
smartem_agent_tools = "smartem_agent.__main__:main"
"smartem.register-prediction-model" = "smartem_backend.cli.register_quality_prediction_model:run"
"smartem.init-model-weight" = "smartem_backend.cli.initialise_prediction_model_weights:run"
"smartem.random-model-predictions" = "smartem_backend.cli.random_model_predictions:run"
"smartem.random-prior-updates" = "smartem_backend.cli.random_prior_updates:run"
"smartem-mcp" = "smartem_mcp.__main__:main"

[project.urls]
GitHub = "https://github.com/DiamondLightSource/smartem-decisions"

[[project.authors]] # Further authors may be added by duplicating this section
email = "daniel.hatton@diamond.ac.uk"
name = "Daniel Hatton"

[[project.authors]] # Further authors may be added by duplicating this section
email = "val.redchenko@diamond.ac.uk"
name = "Val Redchenko"

[tool.setuptools]
packages = [
    "smartem_backend",
    "smartem_agent",
    "smartem_common",
    "athena_api",
    "smartem_mcp"
]
package-dir = {"" = "src"}

[tool.setuptools_scm]
version_file = "src/_version.py"

[tool.pyright]
typeCheckingMode = "standard"
reportMissingImports = false # Ignore missing stubs in imported modules

[tool.pytest.ini_options]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = """
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
    """
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
filterwarnings = [
    "error",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20" # temporarily supress Pydantic deprecation warnings
]
# Doctest python code in docs, python code in src docstrings, test functions in tests
testpaths = "docs src tests"
# Exclude Alembic migration files from pytest collection (they're not meant to be imported directly)
norecursedirs = "src/smartem_backend/migrations"

[tool.coverage.run]
data_file = "/tmp/core.coverage"

[tool.coverage.paths]
# Tests are run from installed location, map back to the src directory
source = ["src", "**/site-packages/"]

# tox must currently be configured via an embedded ini string
# See: https://github.com/tox-dev/tox/issues/999
[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist=False
# Add setuptools to the build requirements
requires = setuptools>=64.0.0

[testenv:{pre-commit,type-checking,tests,docs}]
exclude = docs/assets/
extras =
    tests: dev
    docs: dev
    pre-commit: dev
    type-checking: dev
commands_pre =
    pip install -e .[all]
passenv = *
allowlist_externals =
    pytest
    pre-commit
    pyright
    sphinx-build
    sphinx-autobuild
    pip
commands =
    pre-commit: pre-commit run --all-files --show-diff-on-failure {posargs}
    type-checking: pyright src tests {posargs}
    tests: pytest {posargs}
    docs: sphinx-{posargs:build -E --keep-going} -T docs build/html
"""
# To treat warnings as errors: `docs: sphinx-{posargs:build -EW --keep-going} -T docs build/html`

[tool.ruff]
src = ["src", "tests"]
line-length = 120
lint.select = [
    "B",   # flake8-bugbear - https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "C4",  # flake8-comprehensions - https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "E",   # pycodestyle errors - https://docs.astral.sh/ruff/rules/#error-e
    "F",   # pyflakes rules - https://docs.astral.sh/ruff/rules/#pyflakes-f
    "W",   # pycodestyle warnings - https://docs.astral.sh/ruff/rules/#warning-w
    "I",   # isort - https://docs.astral.sh/ruff/rules/#isort-i
    "UP",  # pyupgrade - https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "SLF", # self - https://docs.astral.sh/ruff/settings/#lintflake8-self
]

[tool.ruff.lint.per-file-ignores]
# By default, private member access is allowed in tests
# See https://github.com/DiamondLightSource/python-copier-template/issues/154
# Remove this line to forbid private member access in tests
"tests/**/*" = ["SLF001"]
